Fix: change linkedlist